# mac-dev-playbook

./: .gitignore  LICENSE  README.adoc  README.md  ansible.cfg  hosts.ini  main.yml  notes.md  pyproject.toml
.github/workflows/: ci.yml
docs/: keepass-device-integration-with-strongbox.md  mac-dev-environment.md  ubuntu-dev-environment.md
group_vars/all/: main.yml
handlers/: main.yml
tasks/: xcode.yml
test/: config.yml
