[tool.poetry]
name = "mac-dev-playbook"
version = "0.1.0"
description = "Configures a Mac development environment via Ansible."
authors = ["Stephen A. Davis <stephen@webdavis.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.3.0"

[tool.poetry.dev-dependencies]
grip = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
